# qdrant-point-api

./: .gitignore  .tool-versions  API_DOCUMENTATION.md  API_SPECIFICATION.md  DEPLOYMENT_TEST_RESULTS.md  Dockerfile  METADATA_REMOVAL_IMPLEMENTATION.md  README.md  pyproject.toml  test_api.py  test_core_sections_api.py  test_deployed_core_sections.py  test_metadata_removal.py  test_new_apis.py  test_reviewer_field.py
src/: app.py  app_.py
